fixed layout bug in backend

--- a/flot_flot/admin/css/admin_style.css
+++ b/flot_flot/admin/css/admin_style.css
@@ -1,5 +1,5 @@
 
-.left_col{float:left;width:200px;padding: 5px;}
+.left_col{float:left;width:200px;padding: 5px;position:absolute;}
 .right_col{margin-left:200px;padding: 5px;}
 
 @media only screen and (max-width : 600px) {
@@ -61,3 +61,14 @@ body.smaller_left .condensed_hidden{display: none;}
   color: #ff4136; }
 
   hr {margin-top: 10px;margin-bottom: 10px;}
+
+  #admin_menu_left{
+    width: 80%;
+    border-right:1px solid silver;
+  }
+
+.left_col a.admin_menu_left{
+    color: gray;
+    display: block;/**/
+    padding: 8px;
+}
